src/components/sidebar/SafeListItem/styles.module.css
.container {
  margin-top: var(--space-1);
  margin-bottom: var(--space-1);
  padding-left: var(--space-2);
}

/* <Track> */
.container > span {
  flex: 1;
}

.safe {
  border-radius: 8px;
  border: 1px solid var(--color-border-light);
  padding-right: 40px;
}

.open {
  padding-left: 16px;
  border: 1px solid var(--color-secondary-light);
  border-left: 6px solid var(--color-secondary-light);
  background-color: var(--color-secondary-background) !important;
}

.safe:hover {
  background-color: var(--color-secondary-background);
}

.container :global .MuiListItemSecondaryAction-root {
  right: 24px;
}

.withPendingButtons :global .MuiListItemSecondaryAction-root {
  right: 74px;
}

.listItemText {
  padding-right: 0;
  flex: none;
  justify-content: flex-start
}

.listItemInfo {
  display:flex;
  flex-direction:row;
  width: 100%;
}

.accountBalance {
  font-weight: bold;
  text-align: center;
  margin: auto;
}

@media (max-width: 400px) {
  .withPendingButtons :global .MuiListItemSecondaryAction-root {
    right: 48px;
  }

  .listItemInfo {
    display: block;
  }

  .accountBalance {
    text-align: start;
  }

}

